--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@sweetalert2/themes": "^5.0.15",
     "apexcharts": "3.44.0",
     "axios": "^1.6.3",
     "prop-types": "15.8.1",
@@ -18,7 +19,8 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
