--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^5.0.0-alpha.160",
+    "@mui/material": "^5.15.4",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@sweetalert2/themes": "^5.0.15",
     "apexcharts": "3.44.0",
     "axios": "^1.6.3",
@@ -20,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
