--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sweetalert2/themes": "^5.0.15",
     "apexcharts": "3.44.0",
     "axios": "^1.6.3",
+    "date-fns": "^3.2.0",
     "moment": "^2.30.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
