--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "apexcharts": "3.44.0",
     "axios": "^1.6.3",
     "date-fns": "^3.2.0",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "moment": "^2.30.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
