--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sweetalert2/themes": "^5.0.15",
     "apexcharts": "3.44.0",
     "axios": "^1.6.3",
+    "bootstrap": "^5.3.2",
     "date-fns": "^3.2.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
