--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "tailwindcss": "3.3.4",
+    "tailwindcss": "^3.3.4",
     "vite": "4.5.0"
   }
 }
